Redwine: fix footer alignment on mobile devices.

--- a/templates/bootstrap/css/style.css
+++ b/templates/bootstrap/css/style.css
@@ -778,7 +778,7 @@ vertical-align:middle;
 .subtext {
     display: inline-block;
     line-height: 20px;
-    margin-left: 73px;
+    /*margin-left: 73px;*/
     text-align: justify;
     max-width: 720px;
     padding: 2px 10px 0 10px;
